# dondola-recreation

./: CMakeLists.txt  README.md  build.sh  main.cpp
assets/player/: animation.json
src/: AnimationPlayer.cpp  AnimationPlayer.h  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  GameManager.cpp  GameManager.h  GamePaused.h  Input.h  LinkedList.h  MyDebugger.h  Observer.h  Player.cpp  Player.h  Subject.h  SubjectObserver.cpp  TextureLoader.h  jsonReader.h  prg.h
src/core/: LinkedList.h  MyDebugger.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  SubjectObserver.cpp  jsonReader.cpp  jsonReader.h  prg.h
src/entities/: Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/managers/: EnemyManager.cpp  EnemyManager.h  GameManager.cpp  GameManager.h
